--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,21 @@ services:
     volumes:
       - ./server:/app
     devices:
-      - "/dev/ttyACM0:/dev/ttyACM0"   # Arduino access
-    privileged: true                  # required for serialport
+      - "/dev/ttyACM0:/dev/ttyACM0"
+    privileged: true
+
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    restart: unless-stopped
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app           # mount your source
+    environment:
+      VITE_BACKEND_URL: http://localhost:3000
+    command: ["npm", "run", "dev", "--", "--host"]
+
 
 volumes:
   mongo_data:
