--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "data_aquisition_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon --legacy-watch src/index.js"
+    "dev": "nodemon --legacy-watch src/server.js"
   },
   "keywords": [],
   "author": "",
