feat: Add Express server with CORS and MongoDB integration
- Added Express and CORS dependencies to package.json.
- Implemented an HTTP API to fetch all motion detection records.
- Updated serial communication to save motion detection data to MongoDB and broadcast it to clients.
- Created a .env.example file for environment variable configuration.
- Added Arduino sketch for motion detection and distance measurement using PIR and ultrasonic sensors.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,10 @@ services:
     volumes:
       - ./server:/app
     devices:
-      - "/dev/ttyACM1:/dev/ttyACM1"
+      - "${SERIAL_PORT}:${SERIAL_PORT}"
     environment:
       MONGO_URL: mongodb://mongo:27017
+      SERIAL_PORT: ${SERIAL_PORT}
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: "100"
     depends_on:
@@ -37,7 +38,7 @@ services:
     volumes:
       - ./frontend:/app
     environment:
-      VITE_BACKEND_URL: http://localhost:3000
+      VITE_API_URL: http://localhost:3000
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: "100"
     command: ["npm", "run", "dev", "--", "--host"]
