--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "mongodb": "^7.0.0",
     "nodemon": "^3.1.11",
     "serialport": "^13.0.0",
